tests/baselines/reference/globalThisVarDeclaration.errors.txt
actual.ts(12,5): error TS2339: Property 'a' does not exist on type 'Window'.
actual.ts(13,5): error TS2339: Property 'b' does not exist on type 'Window'.
b.js(12,5): error TS2339: Property 'a' does not exist on type 'Window'.
b.js(13,5): error TS2339: Property 'b' does not exist on type 'Window'.


==== b.js (2 errors) ====
    var a = 10;
    this.a;
    this.b;
    globalThis.a;
    globalThis.b;
    
    // DOM access is not supported until the index signature is handled more strictly
    self.a;
    self.b;
    window.a;
    window.b;
    top.a;
        ~
!!! error TS2339: Property 'a' does not exist on type 'Window'.
    top.b;
        ~
!!! error TS2339: Property 'b' does not exist on type 'Window'.
    
==== actual.ts (2 errors) ====
    var b = 10;
    this.a;
    this.b;
    globalThis.a;
    globalThis.b;
    
    // same here -- no DOM access to globalThis yet
    self.a;
    self.b;
    window.a;
    window.b;
    top.a;
        ~
!!! error TS2339: Property 'a' does not exist on type 'Window'.
    top.b;
        ~
!!! error TS2339: Property 'b' does not exist on type 'Window'.
    
    